@@ -929,7 +929,7 @@ public class SharedQueueProcessingService {
         var timingInfo = finishedJob.jobTimingInfo();
         if (timingInfo.buildStartDate() != null && timingInfo.buildCompletionDate() != null) {
             double durationSeconds = java.time.Duration.between(timingInfo.buildStartDate(), timingInfo.buildCompletionDate()).toMillis() / 1000.0;
-            log.info("Build finished for participation {} in {} s (name: {})", finishedJob.participationId(), String.format("%.1f", durationSeconds), finishedJob.name());
+            log.info("Build finished for participation {} in {} s (name: {})", finishedJob.participationId(), "%.1f".formatted(durationSeconds), finishedJob.name());
         }
         distributedDataAccessService.getDistributedBuildResultQueue().add(resultQueueItem);
     }
