@@ -101,6 +101,7 @@ import de.tum.cit.aet.artemis.quiz.domain.ShortAnswerSpot;
 import de.tum.cit.aet.artemis.quiz.dto.QuizBatchJoinDTO;
 import de.tum.cit.aet.artemis.quiz.dto.exercise.QuizExerciseDatesDTO;
 import de.tum.cit.aet.artemis.quiz.dto.exercise.QuizExerciseForCourseDTO;
+import de.tum.cit.aet.artemis.quiz.dto.exercise.QuizExerciseForSearchDTO;
 import de.tum.cit.aet.artemis.quiz.dto.exercise.QuizExerciseWithQuestionsDTO;
 import de.tum.cit.aet.artemis.quiz.dto.exercise.QuizExerciseWithSolutionDTO;
 import de.tum.cit.aet.artemis.quiz.dto.exercise.QuizExerciseWithoutQuestionsDTO;
@@ -315,7 +316,7 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
 
     private void checkCreatedFile(String path) throws Exception {
         MediaType mediaType = path.endsWith(".png") ? MediaType.IMAGE_PNG : MediaType.IMAGE_JPEG;
-        String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, path);
+        String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, path);
         MvcResult result = request.performMvcRequest(get(requestUrl)).andExpect(status().isOk()).andExpect(content().contentType(mediaType)).andReturn();
         byte[] image = result.getResponse().getContentAsByteArray();
         assertThat(image).isNotEmpty();
@@ -802,10 +803,33 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
         long exerciseId = quizExercise.getId();
 
         var searchTerm = pageableSearchUtilService.configureSearch(String.valueOf(exerciseId));
-        SearchResultPageDTO<QuizExercise> searchResult = request.getSearchResult("/api/quiz/quiz-exercises", OK, QuizExercise.class,
+        SearchResultPageDTO<QuizExerciseForSearchDTO> searchResult = request.getSearchResult("/api/quiz/quiz-exercises", OK, QuizExerciseForSearchDTO.class,
                 pageableSearchUtilService.searchMapping(searchTerm));
 
-        assertThat(searchResult.getResultsOnPage()).filteredOn(quiz -> quiz.getId() == exerciseId).hasSize(1);
+        QuizExerciseForSearchDTO match = searchResult.getResultsOnPage().stream().filter(quiz -> quiz.id() == exerciseId).findFirst().orElseThrow();
+        assertThat(match.type()).isEqualTo("quiz");
+        assertThat(match.course()).isNotNull();
+        assertThat(match.course().title()).isEqualTo(quizExercise.getCourseViaExerciseGroupOrCourseMember().getTitle());
+        assertThat(match.exerciseGroup()).isNull();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testSearchDTOShapeForExamQuiz() throws Exception {
+        QuizExercise examQuiz = quizExerciseUtilService.createAndSaveExamQuiz(ZonedDateTime.now().minusDays(1), ZonedDateTime.now().minusHours(2));
+        long examQuizId = examQuiz.getId();
+
+        var searchTerm = pageableSearchUtilService.configureSearch(String.valueOf(examQuizId));
+        SearchResultPageDTO<QuizExerciseForSearchDTO> searchResult = request.getSearchResult("/api/quiz/quiz-exercises", OK, QuizExerciseForSearchDTO.class,
+                pageableSearchUtilService.searchMapping(searchTerm));
+
+        QuizExerciseForSearchDTO match = searchResult.getResultsOnPage().stream().filter(quiz -> quiz.id() == examQuizId).findFirst().orElseThrow();
+        assertThat(match.type()).isEqualTo("quiz");
+        assertThat(match.course()).isNull();
+        assertThat(match.exerciseGroup()).isNotNull();
+        assertThat(match.exerciseGroup().exam()).isNotNull();
+        assertThat(match.exerciseGroup().exam().course()).isNotNull();
+        assertThat(match.exerciseGroup().exam().course().title()).isEqualTo(examQuiz.getCourseViaExerciseGroupOrCourseMember().getTitle());
     }
 
     @Test
@@ -2372,12 +2396,12 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
                 assertThat(dragItems.get(3).getText()).as("Text for drag item is correct").isNull();
                 assertThat(dragItems.get(3).getPictureFilePath()).as("Picture file path for drag item is correct").isNotEmpty();
 
-                String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, dragAndDropQuestion.getBackgroundFilePath());
+                String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, dragAndDropQuestion.getBackgroundFilePath());
                 assertThat(request.get(requestUrl, OK, byte[].class)).isNotEmpty();
 
                 for (DragItem dragItem : dragItems) {
                     if (dragItem.getPictureFilePath() != null) {
-                        String requestUrlPath = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, dragItem.getPictureFilePath());
+                        String requestUrlPath = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, dragItem.getPictureFilePath());
                         assertThat(request.get(requestUrlPath, OK, byte[].class)).isNotEmpty();
                     }
                 }
